tests/fixtures/ok/ParamsCountOk3.php
<?php

namespace ParamsCountOk3;

class A
{
	function test()
	{
	}
}


class B extends A
{
	function test($a1 = 1, $a2 = 2)
	{
	}
}
